--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://whitefusion.github.io/white-orchard
-root: /white-orchard/
+url: https://whitefusion.github.io
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -79,5 +79,5 @@ theme: inside
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/whitefusion/white-orchard.git
+  repo: https://github.com/whitefusion/whitefusion.github.io.git
   branch: master
